cabal-version:       2.2

name:                hascii
version:             0.1.0.0
synopsis:            ASCII art generator from images
description:         A command-line tool that converts raster images (PNG, JPG, BMP)
                     into ASCII art using configurable character palettes.
homepage:            https://github.com/githubuser/hascii#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2026 Author name here
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable hascii
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Ascii
  default-language:    Haskell2010
  build-depends:       base              >= 4.7 && < 5
                     , JuicyPixels       >= 3.3 && < 3.4
                     , optparse-applicative >= 0.17 && < 0.20
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/githubuser/hascii
